--- a/package.json
+++ b/package.json
@@ -1,15 +1,30 @@
 {
-  "name": "k-custom-plugins",
-  "version": "0.1.0",
-  "private": true,
+  "name": "v-custom-plugins",
+  "author": "kangjinrui<1092014304@qq.com>",
+  "description": "基于vue+element-ui的自定义组件",
+  "version": "0.2.2",
+  "private": false,
+  "main": "dist/v-custom-plugins.umd.min.js",
+  "keywords": [
+    "vue",
+    "components"
+  ],
+  "license": "MIT",
+  "files": [
+    "dist/v-custom-plugins.umd.min.js"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib --name v-custom-plugins --dest dist src/index.js"
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
+    "shapefile": "^0.6.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -17,8 +32,10 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "element-ui": "^2.15.12",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "vue": "^2.6.14",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
